Header alignment fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -58,10 +58,13 @@ body {
  .companyheader {
         float: none;
         .logo {
-            margin-top: 2px;
+            img, .logo, & {
+                line-height: 0;
+            }
         }
         .logo, .companyname {
-            float: left;
+            display: inline-block;
+            vertical-align: middle;
             margin-right: 5px;
         }
         .companyname a {
@@ -91,11 +94,149 @@ body {
 }   /* end HEADER */
 
 
+
+// -----------------------------------------------------------------
+// Respnsive flex header
+
+
+.companyheader {
+    // Flex parent
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-direction: normal;
+    -moz-box-direction: normal;
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: start;
+    -moz-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-align-content: flex-start;
+    -ms-flex-line-pack: start;
+    align-content: flex-start;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;    
+}
+
+.widget.logo {
+    // Flex child
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-box-flex: 0;
+    -moz-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+
+    // Layout
+    text-align:center;
+    max-width: 100%;
+
+    @media @tablet {
+        -webkit-order: 2;
+        -ms-flex-order: 2;
+        order: 2;
+        text-align: left;
+    }
+}
+
+.widget.companyname {
+    // Flex child
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-box-flex: 10;
+    -moz-box-flex: 10;
+    -webkit-flex: 10 10 auto;
+    -ms-flex: 10 10 auto;
+    flex: 10 10 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+
+    @media @tablet {
+        -webkit-order: 3;
+        -ms-flex-order: 3;
+        order: 3;
+        }
+}
+
+
+.top-basket-container {
+    // Flex child
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+
+    @media @tablet {
+        -webkit-order: 1;
+        -ms-flex-order: 1;
+        order: 1;
+        width: 100%;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
 /* ===============================
   ECOM - BASKET
    =============================== */
 
 .top-basket-container { /* basket in DESKTOP & TABLET */
+    display: inline-block;
+    vertical-align: middle;
+    .widget.ecombasket {
+        float: none;
+        width: auto;
+        .ecombasket-pull {
+            position: relative;
+            width: auto;
+        }
+         .ecombasket-list-container {
+            right: 0;
+            left: auto;
+            min-width: 200px;
+         }
+    }
     @media @mobile {
         display: none;
     }
